# RAYONIX-CHAIN

./: README.md  README2.md  Readme2.md  blockchain.py  cleanup_locks.py  config.py  consensus.py  database.py  database_interface.py  main.py  main0.py  main2.py  mainmain.py  mainmain2.py  models.py  p2p_network.py  pyproject.toml  rayonix.yaml  rayonix_chain.py  rayonix_cli.py  rayonix_coin.py  rayonixd  rayonixd.py  requirements.txt  secure.py  smart_contract.py  structure.txt  utxo.py  wallet.py
.github/workflows/: python-app.yml
api/: jsonrpc_methods.py  rest_routes.py  server.py
blockchain/config/: factory.py  production_config.py
blockchain/consensus/: grpc_client.py  rayonix_consensus_bridge.py
blockchain/core/: __init__.py  rayonix_chain.py  rayonix_coin.py
blockchain/fees/: __init__.py  fee_estimator.py  fee_strategies.py
blockchain/forks/: __init__.py  fork_manager.py  fork_resolution.py  risk_assessment.py
blockchain/models/: __init__.py  block.py  chain_state.py  fork.py  transaction_results.py  validation.py
blockchain/production/: __init__.py  block_producer.py  block_signing.py
blockchain/state/: __init__.py  checkpoint_manager.py  genesis_state_handler.py  state_manager.py
blockchain/transactions/: __init__.py  coin_selection.py  mempool.py  transaction_manager.py
blockchain/utils/: block_calculations.py  config_utils.py  config_validator.py  database_wrapper.py  gas_management.py  genesis.py  merkle.py
blockchain/validation/: __init__.py  block_validators.py  transaction_validators.py  validation_manager.py  validation_pipelines.py
cli/: history_manager.py  interactive.py
config/: config.py  config_manager.py  config_schema.py  consensus_config.py  merkle_config.py  patch_config.py  rayonix.yaml  sync_config.py
consensusengine/: __init__.py  consensus.py  structure.txt
consensusengine/abci/: handlers.py  interface.py
consensusengine/config/: consensus_config.py
consensusengine/core/: consensus.py  state.py
consensusengine/crypto/: signing.py
consensusengine/models/: __init__.py  blocks.py  validators.py  votes.py
consensusengine/network/: protocol.py
consensusengine/staking/: manager.py  slashing.py
consensusengine/utils/: database.py  timing.py
core/: __init__.py  dependencies.py  node.py  rayonix_blockchain.py
database/: _init_.py  init.py  structure.txt
database/core/: __init__.py  compression.py  database.py  encryption.py  indexing.py  init.py  integrity_manager.py  serialization.py
database/features/: _init_.py  database_manager.py  health_monitor.py  init.py  query_builder.py  transaction.py
database/interfaces/: _init_.py  base_interfaces.py  (+1 more)
merkle_system/: merkle.py
network/: __init__.py  connection_manager.py  exception.py  exceptions.py  message_handlers.py  message_manager.py  metric_manager.py  models.py  network_manager.py  p2p_network.py  peer_manager.py  protocol_manager.py  security_manager.py  structure.txt  sync_manager.py  utils.py
rayonix_node/: __init__.py
rayonix_wallet/: __init__.py  wallet.txt
smart_contract/: __init__.py
tasks/: mempool_task.py  peer_monitor.py  staking_task.py
utils/: __init__.py  validators.py
utxo_system/: __init__.py  structure.txt
(+230 files in other folders)
